# augment-dashboard-to-copilot-metrics

./: .env.example  .gitignore  AGGREGATION_FEATURE.md  API_FIX_SUMMARY.md  ARCHITECTURE.md  CLI_AGENT_METRICS_UPDATE.md  COMPARISON_COPILOT_VS_AUGMENT.md  CSV_TO_JSON_MAPPING.md  CUSTOMER_DELIVERY_CHECKLIST.md  DELIVERY_SUMMARY.md  FIELD_MAPPING.md  FINAL_UPDATE_SUMMARY.md  LICENSE  QUICK_REFERENCE.md  README.md  SCHEMA_CORRECTIONS.md  SETUP.md  STAGING_REMOVAL_AUDIT.md  TESTING_GUIDE.md  UPDATE_STATUS.md  augment_metrics_format.json  copilot_dailyy_schema.txt  copilot_metrics_format.json  dashboard_page.html  pyproject.toml  requirements.txt  setup.py  test_aggregation.py  test_api_call.py  test_api_urls.py  test_installation.py
scripts/: check_all_fields.py  discover_api.py  find_api_endpoint.md  inspect_dashboard.py  run_scraper.sh  setup_cron.sh  test_api_response.py
src/dashboard_scraper/: __main__.py  client.py  config.py  cookie_auth.py  copilot_aggregator.py  copilot_converter.py  daily_metrics.py  date_utils.py  export.py  http.py  logging_config.py  main.py
tests/: __init__.py  test_date_utils.py  test_export.py
